--- a/angular-project/package.json
+++ b/angular-project/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@igniteui/material-icons-extended": "^3.0.0",
+    "@syncfusion/ej2-angular-navigations": "^20.2.36",
     "bootstrap": "^5.3.2",
+    "fflate": "^0.8.1",
+    "hammerjs": "^2.0.8",
     "json-server": "^1.0.0-alpha.23",
     "material-design-icons": "^3.0.1",
     "rxjs": "~7.8.0",
@@ -31,6 +35,8 @@
     "@angular-devkit/build-angular": "^16.2.7",
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
+    "@igniteui/angular-schematics": "~16.0.1200",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
